--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,11 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    //jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compileOnly("org.springframework.boot:spring-boot-devtools")
+    //h2 데이터 베이스
+    runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
