--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# DATABASE
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:~/local
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
+#JPA
+#Set Database Engine
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#Define rules to create tables based on entities.
+spring.jpa.hibernate.ddl-auto=update
