--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,13 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.assertj:assertj-core:3.23.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
+
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     //jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly("org.springframework.boot:spring-boot-devtools")
